<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/relativeLayout1"
        android:padding="15dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/linear_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"  />

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:layout_marginLeft="50dp"
                android:layout_toEndOf="@+id/textView"
                android:layout_alignTop="@+id/textView_title"
                android:layout_alignLeft="@+id/spinner_genre"
                android:layout_alignStart="@+id/spinner_genre" />

            </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="10dp"
            android:text="@string/genre"
            android:layout_below="@+id/linear_title"
            android:layout_alignLeft="@+id/linear_title"
            android:layout_alignStart="@+id/linear_title" />

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/string_array_genre"
            android:layout_marginLeft="35dp"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:id="@+id/textView3"
                android:layout_marginBottom="5dp"/>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView3">

                    <EditText
                        android:id="@+id/editText_description"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_description"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="5dp" />

            </ScrollView>

        </RelativeLayout>

    </RelativeLayout>

    <!-- FOOTER -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:background="@drawable/border_footer"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/relativeLayout3"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:background="@drawable/ic_action_save"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
